Added a function that will search for SKU to be used to verify if sku exists. Closes #81